--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Livestock Biofeed Inc. — Feed Better</title>
   <meta name="description"
-    content="Biological, non-GMO livestock feed based on local resources, designed to match or outperform industrial feeds with batch traceability and audit-ready documentation." />
+    content="Organic, non-GMO livestock feed based on local resources, designed to match or outperform industrial feeds with batch traceability and audit-ready documentation." />
   <link rel="icon" href="assets/img/logo.png" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <script src="assets/js/config.js"></script>
@@ -24,7 +24,7 @@
             <img src="assets/img/logo.png" alt="Livestock Biofeed Inc. logo" />
             <div class="name">
               <strong>Livestock Biofeed Inc.</strong>
-              <span data-i18n="kicker_a">100% BIOLOGICAL</span>
+              <span data-i18n="kicker_a">100% ORGANIC</span>
             </div>
           </a>
         </div>
@@ -79,16 +79,16 @@
         <div class="hero-grid">
           <div>
             <div class="kicker">
-              <b data-i18n="kicker_a">100% BIOLOGICAL</b>
+              <b data-i18n="kicker_a">100% ORGANIC</b>
               <span>•</span>
               <span data-i18n="kicker_b">Non‑GMO</span>
               <span>•</span>
               <span class="badge" data-i18n="meta_track">Traceable</span>
             </div>
 
-            <h1 data-i18n="hero_title">Feed Better.</h1>
-            <p data-i18n="hero_sub">Premium biological livestock feed designed for performance, traceability, and trust
-              — from ingredient sourcing to batch-level tracking.</p>
+            <h1 data-i18n="hero_title">Feed Better</h1>
+            <p data-i18n="hero_sub">Organic, non-GMO feed built for predictable outcomes — with traceability designed
+              for farms, distributors, and partners.</p>
 
             <div class="actions" style="margin-top:14px;">
               <a class="btn btn-primary" href="#products" data-i18n="hero_btn1">Explore products</a>
@@ -206,13 +206,13 @@
 
     <section class="section" id="comparison">
       <div class="container">
-        <h2>BIO-FEED™ vs Industrial Feeds</h2>
-        <p class="sub">Real numbers. Real farms. Real results.</p>
+        <h2 data-i18n="sec_comp_t">BIO-FEED™ vs Industrial Feeds</h2>
+        <p class="sub" data-i18n="sec_comp_sub">Real numbers. Real farms. Real results.</p>
 
         <div class="grid-2" style="align-items: center; margin-top: 2rem; gap: 2rem;">
           <div>
-            <h3>Why Farmers Switch to Bio-Feed</h3>
-            <ul class="list" style="padding-left: 1.5rem;">
+            <h3 data-i18n="comp_card_t">Why Farmers Switch to Bio-Feed</h3>
+            <ul class="list" id="compList" style="padding-left: 1.5rem;">
               <li>20–40% lower feed cost</li>
               <li>Lower mortality</li>
               <li>Better digestibility</li>
@@ -227,10 +227,10 @@
 
         <div class="card"
           style="margin-top: 2rem; background:#1F5E3B; color:white; padding: 2rem; text-align:center; border-radius: 16px;">
-          <h3 style="color: white; margin-top: 0;">See the Full Comparison</h3>
-          <p>Download the 2-page PDF with real farm numbers.</p>
+          <h3 style="color: white; margin-top: 0;" data-i18n="sec_pdf_t">See the Full Comparison</h3>
+          <p data-i18n="sec_pdf_p">Download the 2-page PDF with real farm numbers.</p>
           <a href="assets/img/Bio-Feed_Quantified_Comparison.pdf" download="Bio-Feed_Quantified_Comparison.pdf"
-            class="btn"
+            class="btn" id="pdfBtn" data-i18n="sec_pdf_btn"
             style="background:#7A5A2E; color:white; border:0; padding: 12px 24px; text-decoration: none; border-radius: 8px;">Download
             PDF</a>
         </div>
