--- a/shop/success.html
+++ b/shop/success.html
@@ -4,22 +4,29 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Success | Livestock Biofeed</title>
+    <title>Order Confirmed | Livestock Biofeed</title>
     <link rel="icon" href="../assets/img/logo.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/ecommerce.css" />
 </head>
 
 <body class="ecommerce-body">
-    <main class="ecommerce-wrap" style="text-align:center; padding-top:100px">
-        <div class="ecommerce-card ecommerce-p">
-            <h1 class="ecommerce-h1">✓ Payment Successful</h1>
-            <p class="ecommerce-muted">Thank you for your order. We are processing it now.</p>
-            <a href="index.html" class="ecommerce-cta">Back to Shop</a>
+    <main class="ecommerce-wrap" style="text-align: center; padding-top: 100px;">
+        <div class="ecommerce-card" style="max-width: 500px; margin: 0 auto; padding: 60px;">
+            <div
+                style="width: 80px; height: 80px; background: var(--e-secondary); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px; color: white; font-size: 40px;">
+                ✓
+            </div>
+            <h1 style="font-size: 32px; font-weight: 900; margin-bottom: 20px;">Order Confirmed!</h1>
+            <p style="color: var(--e-muted); font-size: 16px; margin-bottom: 40px;">Thank you for your purchase. We've
+                sent a confirmation email with your order details and tracking information.</p>
+            <a href="index.html" class="ecommerce-btn-lg ecommerce-btn-primary"
+                style="text-decoration:none; display: block;">Continue Shopping</a>
         </div>
     </main>
     <script src="../assets/js/shop/cart.js"></script>
-    <script>window.LBB_CART ? window.LBB_CART.setCart([]) : null;</script>
+    <script>if (window.LBB_CART) window.LBB_CART.setCart([]);</script>
 </body>
 
 </html>
